@@ -416,7 +416,11 @@ PORT ds390_port =
   1,				/* transform >= to ! < */
   1,				/* transform != to !(a == b) */
   0,				/* leave == */
+#if 0 // obsolete, and buggy for != xdata
   TRUE,                         /* we support array initializers. */
+#else
+  FALSE,                        /* No array initializer support. */
+#endif
   cseCostEstimation,
   __ds390_builtins,             /* table of builtin functions */
   GPOINTER,			/* treat unqualified pointers as "generic" pointers */
